--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     </ul>                
                 </div>                                            
             </div>
-            <p class="btn-download text-center"><a href="https://drive.google.com/open?id=1w9KL6mv-a4uSyAlBPmGDXsTtpD9h83JB" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
+            <p class="btn-download text-center"><a href="https://drive.google.com/open?id=1FbAw15vjUw3MStqGBT2c85AJeXKQa3iK" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
         </div>
     </section>
 
@@ -230,6 +230,33 @@
                 </div>
             </div>
             <!-- RelivingVRV2 project -->
+            <!-- ReliveReality project-->
+            <div class="row v-center">
+                <div class="col-md-5 text-center img-style small-padding">
+                    <div class="my-slide">
+                        <!-- Wrapper for slides -->
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/ReliveReality_Idea.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/ReliveReality_final.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/ReliveReality_P1.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/ReliveReality_P2.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/ReliveReality_P3.png"></div>                     
+                    </div>                    
+                </div>                            
+                <div class="col-md-7 text-left text-style">
+                    <h2>
+                        <header class="con3">IEEE VR 2020</header>
+                        ReliveReality: Enabling Socially Reliving Experiences in Virtual Reality via a Single RGB camera
+                    </h2>
+                    <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Shengguang Bai, Ian Switzer, and Andrea Stevenson Won</h4>             
+                    <h3 class="record"><i class="fa fa-book"></i>Under Review</h3>
+                    <h3>We present a new experience sharing method, ReliveReality, which  transforms traditional photo/video memories into 3D reconstructed memories and allows users to relive past experiences through VR socially. ReliveReality utilizes deep learning-based computer vision techniques to reconstruct people in clothing, estimate multi-person 3D pose and reconstruct 3D environments with only a single RGB camera. Integrating with a networked multi-user VR environment, ReliveReality enables people to ‘enter' into a past experience, move around and relive a memory from different perspectives in VR together. We discuss the technical implementation and implications of such techniques for privacy}</h3>
+                    <ul class="list-btn">
+                        <!--<li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>-->
+                        <!--<li><a href="https://www.youtube.com/watch?v=xrhbQEHa27w" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>-->                          
+                    </ul>                    
+                </div>
+            </div>
+            <!-- ReliveReality project -->
             <!-- RelivingVR project-->
             <div class="row v-center">
                 <div class="col-md-5 text-center img-style small-padding">
@@ -578,6 +605,11 @@
                         <h2>Again, Together: Socially Reliving Virtual Reality Experiences When Separated</h2>
                         <h3>CHI 2020, Full Paper</h3>
                          <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Mose Sakashita, Jingjin Li, Upol Ehsan, and Andrea Stevenson Won</h4>              
+                    </div>
+                    <div class="list-wrap text-left">
+                        <h2>Privacy-Preserving Relived Experiences in Virtual Reality</h2>
+                        <h3>IEEE VR 2020, Doctoral Consortium</h3>
+                         <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span></h4>              
                     </div>
                     <div class="list-wrap text-left">
                         <h2><a href="https://ieeexplore.ieee.org/document/8797789" target="_blank">RelivelnVR: Capturing and Reliving VirtualReality Experiences Together</a></h2>
