--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                 <div class="col-md-9 about-content">
                     <h3>I’m Eric Wang, a Ph.D. student in Information Science at Cornell University advised by <a href="https://communication.cals.cornell.edu/people/andrea-won" target="_blank">Prof. Andrea Stevenson Won</a>. Previously, I was a research intern at Stanford University, primarily working with <a href="https://profiles.stanford.edu/james-landay/" target="_blank">Prof. James Landay</a>. I have B.S and M.S. in Computer Science from National Taiwan University advised by <a href="http://mikechen.com/" target="_blank">Prof. Mike Y. Chen</a> and <a href="http://graphics.im.ntu.edu.tw/~robin/" target="_blank">Prof. Bing-Yu Chen</a>.</h3>
 
-                     <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW) </span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> My current topic is focused on transforming the way people share knowledge and experiences beyond photo/video recordings. More specifically, I’m interested in (1) utilizing deep learning, computer vision and VR to enable sharing experiences through <span class="bold">socially reliving experiences in VR</span>; (2) leveraging such novel time-machine-like VR reliving experience to <span class="bold">support better remote collaboration and learning</span>; and (3) designing <span class="bold">VR privacy-preserving mechanisms</span> for sharing contents in VR without privacy concerns.</h3>
+                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW) </span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> My PhD research topic is <span class="bold">enabling VR socially relived experience</span> which allows people to ‘enter’ into a past experience, move around and relive a experience from different perspectives in VR socially and exploring <span class="bold">how such new VR relived experiences transform the way people share experiences</span>.</h3>
+
+                    <h3>More specifically, I’m interested in (1) utilizing deep learning, computer vision and VR to enable reconstructing past experience in 3D and sharing experiences through socially reliving experiences in VR; (2)  investigating how people identify with their reconstructed avatars and privacy concerns when sharing VR relived experience, and(3) designing novel mechanisms allowing people to customize their reconstructed experiences for self-presentation while preserving the privacy. </h3>
     
                 </div>                
             </div>
@@ -135,6 +137,10 @@
                     <h2>Experience</h2>
                 </div>
                 <div class="col-md-9 about-list">
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span>Computer-mediated Communication, Cornell University</h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2020</h5></li>
+                    </ul>
                     <ul>
                         <li class="list-left"><h3><span class="bold">Research Assistant,</span>VR as a Teaching Tool for Moon Phases and Beyond, Cornell University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2019</h5></li>
@@ -221,11 +227,12 @@
                         Again, Together: Socially Reliving Virtual Reality Experiences When Separated
                     </h2>
                     <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Mose Sakashita, Jingjin Li, Upol Ehsan, and Andrea Stevenson Won</h4>             
-                    <h3 class="record"><i class="fa fa-book"></i>Accepted by CHI 2020</h3>
+                    <h3 class="record"><i class="fa fa-book"></i>Published in ACM CHI 2020 (full paper)</h3>
                     <h3>We describe ReliveInVR, a new time-machine-like VR experience sharing method. ReliveInVR allows multiple users to immerse themselves in the relived experience together and independently view the experience from any perspective. We conducted a 1x3 within-subject study with 26 dyads to compare ReliveInVR with (1) co-watching 360-degree videos on desktop, and (2) co-watching 360-degree videos in VR. Our results suggest that participants reported higher levels of immersion and social presence in ReliveInVR. Participants in ReliveInVR also understood the shared experience better, discovered unnoticed things together and found the sharing experience more fulfilling.</h3>
                     <ul class="list-btn">
                         <!--<li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>-->
-                        <li><a href="https://www.youtube.com/watch?v=xrhbQEHa27w" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>                          
+                        <li><a href="https://dl.acm.org/doi/abs/10.1145/3313831.3376642" class="btn-paper" data-toggle="lightbox"><i class="fa fa-file-text"></i>Paper</a></li>  
+                        <li><a href="https://www.youtube.com/watch?v=d2WQXduv6oU" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>                          
                     </ul>                    
                 </div>
             </div>
@@ -248,11 +255,12 @@
                         ReliveReality: Enabling Socially Reliving Experiences in Virtual Reality via a Single RGB camera
                     </h2>
                     <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Shengguang Bai, Ian Switzer, and Andrea Stevenson Won</h4>             
-                    <h3 class="record"><i class="fa fa-book"></i>Under Review</h3>
+                    <h3 class="record"><i class="fa fa-book"></i>Published in IEEE VR 2020 (poster)</h3>
                     <h3>We present a new experience sharing method, ReliveReality, which  transforms traditional photo/video memories into 3D reconstructed memories and allows users to relive past experiences through VR socially. ReliveReality utilizes deep learning-based computer vision techniques to reconstruct people in clothing, estimate multi-person 3D pose and reconstruct 3D environments with only a single RGB camera. Integrating with a networked multi-user VR environment, ReliveReality enables people to ‘enter' into a past experience, move around and relive a memory from different perspectives in VR together. We discuss the technical implementation and implications of such techniques for privacy}</h3>
                     <ul class="list-btn">
                         <!--<li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>-->
-                        <!--<li><a href="https://www.youtube.com/watch?v=xrhbQEHa27w" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>-->                          
+                        <li><a href="https://ieeexplore.ieee.org/document/9090534" class="btn-paper" data-toggle="lightbox"><i class="fa fa-file-text"></i>Paper</a></li> 
+                        <li><a href="https://youtu.be/nojZW9Ovb9A" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>                          
                     </ul>                    
                 </div>
             </div>
@@ -605,6 +613,11 @@
                         <h2>Again, Together: Socially Reliving Virtual Reality Experiences When Separated</h2>
                         <h3>CHI 2020, Full Paper</h3>
                          <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Mose Sakashita, Jingjin Li, Upol Ehsan, and Andrea Stevenson Won</h4>              
+                    </div>
+                    <div class="list-wrap text-left">
+                        <h2>ReliveReality: Enabling Socially Reliving Experiences in Virtual Reality via a Single RGB camera</h2>
+                        <h3>IEEE VR 2020, Poster</h3>
+                        <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Shengguang Bai, and Andrea Stevenson Won</h4>             
                     </div>
                     <div class="list-wrap text-left">
                         <h2>Privacy-Preserving Relived Experiences in Virtual Reality</h2>
