--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
                     <h3 class="record"><i class="fa fa-book"></i>Published in ACM CHI 2020 (full paper)</h3>
                     <h3>We describe ReliveInVR, a new time-machine-like VR experience sharing method. ReliveInVR allows multiple users to immerse themselves in the relived experience together and independently view the experience from any perspective. We conducted a 1x3 within-subject study with 26 dyads to compare ReliveInVR with (1) co-watching 360-degree videos on desktop, and (2) co-watching 360-degree videos in VR. Our results suggest that participants reported higher levels of immersion and social presence in ReliveInVR. Participants in ReliveInVR also understood the shared experience better, discovered unnoticed things together and found the sharing experience more fulfilling.</h3>
                     <ul class="list-btn">
-                        <!--<li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>-->
-                        <li><a href="https://dl.acm.org/doi/abs/10.1145/3313831.3376642" class="btn-paper" data-toggle="lightbox"><i class="fa fa-file-text"></i>Paper</a></li>  
+                        <li><a href="https://dl.acm.org/doi/abs/10.1145/3313831.3376642" target="_blank" class="btn-paper"><i class="fa fa-caret-square-o-right"></i>Paper</a></li>
                         <li><a href="https://www.youtube.com/watch?v=d2WQXduv6oU" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>                          
                     </ul>                    
                 </div>
@@ -258,8 +257,7 @@
                     <h3 class="record"><i class="fa fa-book"></i>Published in IEEE VR 2020 (poster)</h3>
                     <h3>We present a new experience sharing method, ReliveReality, which  transforms traditional photo/video memories into 3D reconstructed memories and allows users to relive past experiences through VR socially. ReliveReality utilizes deep learning-based computer vision techniques to reconstruct people in clothing, estimate multi-person 3D pose and reconstruct 3D environments with only a single RGB camera. Integrating with a networked multi-user VR environment, ReliveReality enables people to ‘enter' into a past experience, move around and relive a memory from different perspectives in VR together. We discuss the technical implementation and implications of such techniques for privacy}</h3>
                     <ul class="list-btn">
-                        <!--<li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>-->
-                        <li><a href="https://ieeexplore.ieee.org/document/9090534" class="btn-paper" data-toggle="lightbox"><i class="fa fa-file-text"></i>Paper</a></li> 
+                        <li><a href="https://ieeexplore.ieee.org/document/9090534" target="_blank" class="btn-paper"><i class="fa fa-caret-square-o-right"></i>Paper</a></li>
                         <li><a href="https://youtu.be/nojZW9Ovb9A" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>                          
                     </ul>                    
                 </div>
