update work and teaching experiences

--- a/index.html
+++ b/index.html
@@ -134,24 +134,59 @@
             </div>
             <div class="row text-left font-height">
                 <div class="col-md-3">
-                    <h2>Experience</h2>
+                    <h2>Work Experience</h2>
                 </div>
                 <div class="col-md-9 about-list">
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span>Computer-mediated Communication, Cornell University</h3></li>
-                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2020</h5></li>
+                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Mar Gonzalez Franco and Dr. Andy Wilson, Microsoft Research</h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Summer 2022</h5></li>
+                    </ul>
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Workshop Co-organizer,</span>Open Access Tools and Libraries for Virtual Reality, IEEE VR 2022</h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2022</h5></li>
+                    </ul>
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Mark Parent and Dr. Marcello Giordano, Facebook Reality Lab</h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2021 & Winter 2022</h5></li>
+                    </ul>
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Mar Gonzalez Franco and Dr. Eyal Ofek, Microsoft Research</h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Summer 2021</h5></li>
+                    </ul>
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Fraser Anderson and Dr. Qian Zhou, Autodesk HCI&VIS groop</h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Winter 2021</h5></li>
                     </ul>
                     <ul>
                         <li class="list-left"><h3><span class="bold">Research Assistant,</span>VR as a Teaching Tool for Moon Phases and Beyond, Cornell University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2019</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span>Introduction to Computing using Matlab, Cornell University</h3></li>
-                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2018</h5></li>
-                    </ul>
-                    <ul>
                         <li class="list-left"><h3><span class="bold">Research Assistant,</span>Remote Touch for Telepresence Robots, Cornell University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2018</h5></li>
+                    </ul>
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Research Intern,</span>Human-Drone Interaction project, Stanford University</h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Apr '15 – Sep '15</h5></li>
+                    </ul>
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Chief Coordinator,</span><a href="https://drive.google.com/file/d/0B-TOzIcx7m_melhIZkRpWGtHd0NJOGNnQi15VVdod2kzbGZz/view?usp=sharing" class="link" target="_blank">2015 CHI@NTU Workshop</a></h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Aug '14 – Sep '14</h5></li>
+                    </ul>               
+                </div>                                            
+            </div>
+            <div class="row text-left font-height">
+                <div class="col-md-3">
+                    <h2>Teaching Experience</h2>
+                </div>
+                <div class="col-md-9 about-list">
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span>Computer-mediated Communication, Cornell University</h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2022</h5></li>
+                    </ul>
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span>Introduction to Computing using Matlab, Cornell University</h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2018</h5></li>
                     </ul>
                     <ul>
                         <li class="list-left"><h3><span class="bold">Teaching Assistant,</span>Crowdsourcing and Human Computation, Cornell University</h3></li>
@@ -166,18 +201,10 @@
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2016</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Research Intern,</span>Human-Drone Interaction project, Stanford University</h3></li>
-                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Apr '15 – Sep '15</h5></li>
-                    </ul>
-                    <ul>
-                        <li class="list-left"><h3><span class="bold">Chief Coordinator,</span><a href="https://drive.google.com/file/d/0B-TOzIcx7m_melhIZkRpWGtHd0NJOGNnQi15VVdod2kzbGZz/view?usp=sharing" class="link" target="_blank">2015 CHI@NTU Workshop</a></h3></li>
-                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Aug '14 – Sep '14</h5></li>
-                    </ul>
-                    <ul>
                         <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="https://mobilehci.hackpad.com/2014S-Mobile-HCI-Class-Schedule-wM4Izj9r0Oa" class="link" target="_blank">Mobile HCI</a>, National Taiwan University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Feb '14 – Jun '14</h5></li>
-                    </ul>                
-                </div>                                            
+                    </ul> 
+                </div>
             </div>
             <p class="btn-download text-center"><a href="https://drive.google.com/open?id=1FbAw15vjUw3MStqGBT2c85AJeXKQa3iK" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
         </div>
