add Virtual Background and Shared Realities project

--- a/index.html
+++ b/index.html
@@ -237,6 +237,57 @@
     <section id="project">
         <div class="container">
             <h1>projects</h1>
+            <!-- Shared Realities project-->
+            <div class="row v-center">
+                <div class="col-md-5 text-center img-style small-padding">
+                    <div class="my-slide">
+                        <!-- Wrapper for slides -->
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/SR_fig1.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/SR_env_hub_h_v2.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/SR_sharing_preference_results_v2.png"></div>
+                    </div>                    
+                </div>                            
+                <div class="col-md-7 text-left text-style">
+                    <h2>
+                        <header class="con3">CSCW 2021</header>
+                        Shared Realities: Avatar Identification and Privacy Concerns in Reconstructed Experiences
+                    </h2>
+                    <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng Yao Wang</span>*, Sandhya Sriram, and Andrea Stevenson Won.</h4>             
+                    <h3 class="record"><i class="fa fa-book"></i>Published in ACM CSCW 2021 (full paper)</h3>
+                    <h3>We present ReliveReality, an experience-sharing method utilizing deep learning-based computer vision techniques to reconstruct clothed humans and 3D environments and estimate 3D pose with only a RGB camera. ReliveReality can be integrated into social virtual environments, allowing others to socially relive a shared experience by moving around the experience from different perspectives, on desktop or in VR. We conducted a 44-participant within-subject study to compare ReliveReality to viewing recorded videos, and to a ReliveReality version with blurring obfuscation. Our results shed light on how people identify with reconstructed avatars, how obfuscation affects reliving experiences, and sharing preferences and privacy concerns for reconstructed experiences. We propose design implications for addressing these issues</h3>
+                    <ul class="list-btn">
+                        <li><a href="https://dl.acm.org/doi/abs/10.1145/3476078" target="_blank" class="btn-paper"><i class="fa fa-caret-square-o-right"></i>Paper</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=01pcAknvChQ" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>                          
+                    </ul>                    
+                </div>
+            </div>
+            <!-- Shared Realities project -->
+            <!-- Virtual Background project-->
+            <div class="row v-center">
+                <div class="col-md-5 text-center img-style small-padding">
+                    <div class="my-slide">
+                        <!-- Wrapper for slides -->
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/vb_website_demo.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/vb_background_effect.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/vb_mturk_template.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/vb_jn_m1a.png"></div>
+                    </div>                    
+                </div>                            
+                <div class="col-md-7 text-left text-style">
+                    <h2>
+                        <header class="con3">CSCW 2021</header>
+                        Hide and Seek: Choices of Virtual Backgrounds in Video Chats and Their Effects on Perception
+                    </h2>
+                    <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng Yao Wang</span>*, Angel Hsing-Chi Hwang*, Yao-Yuan Yang, and Andrea Stevenson Won. (*equal contribution)</h4>             
+                    <h3 class="record"><i class="fa fa-book"></i>Published in ACM CSCW 2021 (full paper)</h3>
+                    <h3>We investigate how users choose virtual backgrounds and how these backgrounds influence viewers' impressions. In Study 1, we created a web prototype allowing users to apply different virtual backgrounds to their camera views and asked users to select backgrounds that they believed would change viewers' perceptions of their personality traits. In Study 2, we then applied virtual backgrounds picked by participants in Study 1 to a subset of videos drawn from the First Impression Dataset. Our study results suggested that the selected virtual backgrounds did not change the personality trait ratings in the intended direction. Instead, virtual background use of any kind results in a consistent "muting effect" that mitigates very high or low ratings (i.e., compressing ratings to the mean level) compared to the ratings of the video with the original background.</h3>
+                    <ul class="list-btn">
+                        <li><a href="https://dl.acm.org/doi/abs/10.1145/3476044" target="_blank" class="btn-paper"><i class="fa fa-caret-square-o-right"></i>Paper</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=3Px-UQCbJ5s" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>                          
+                    </ul>                    
+                </div>
+            </div>
+            <!-- Virtual Background project -->
             <!-- RelivingVRV2 project-->
             <div class="row v-center">
                 <div class="col-md-5 text-center img-style small-padding">
