--- a/index.html
+++ b/index.html
@@ -237,6 +237,30 @@
     <section id="project">
         <div class="container">
             <h1>projects</h1>
+            <!-- VideoPoseVR project-->
+            <div class="row v-center">
+                <div class="col-md-5 text-center img-style small-padding">
+                    <div class="my-slide">
+                        <!-- Wrapper for slides -->
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/VideoPoseVR_teaser.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/VideoPoseVR_features.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/VideoPoseVR_dataset_all.png"></div>
+                    </div>                    
+                </div>                            
+                <div class="col-md-7 text-left text-style">
+                    <h2>
+                        <header class="con3">Under Review</header>VideoPoseVR: Prototyping Animated Characters in VR through Reconstructing 3D Human Motion from Online Videos
+                    </h2>
+                    <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng Yao Wang</span> et al.</h4>             
+                    <h3 class="record"><i class="fa fa-book"></i>Under Review (full paper)</h3>
+                    <h3>We introduce VideoPoseVR, a system that allows users to animate VR characters using human motions extracted from online videos. We demonstrate an end-to-end workflow that allows users to retrieve desired motion from 2D videos, edit the motion, and apply it to virtual characters in VR. \VPVR leverages deep learning-based computer vision techniques to reconstruct 3D human motions from videos and enable semantic searching of specific motions without annotating videos. Users can edit, mask, and blend motions from different videos to refine the movement. We implemented and evaluated a proof-of-concept prototype to demonstrate VideoPoseVR's interaction possibilities and use cases. The study results suggest that the prototype was easy to learn and use and that it could be used to quickly prototype immersive environments for applications such as entertainment, skills training, and crowd simulations.</h3>
+                    <ul class="list-btn">
+                        <li><a target="_blank" class="btn-paper"><i class="fa fa-caret-square-o-right"></i>Paper</a></li>
+                        <li><a href="https://youtu.be/JEzur6TME2I" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>                          
+                    </ul>                    
+                </div>
+            </div>
+            <!-- VideoPoseVR project -->
             <!-- Shared Realities project-->
             <div class="row v-center">
                 <div class="col-md-5 text-center img-style small-padding">
@@ -252,7 +276,7 @@
                         <header class="con3">CSCW 2021</header>
                         Shared Realities: Avatar Identification and Privacy Concerns in Reconstructed Experiences
                     </h2>
-                    <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng Yao Wang</span>*, Sandhya Sriram, and Andrea Stevenson Won.</h4>             
+                    <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng Yao Wang</span>, Sandhya Sriram, and Andrea Stevenson Won.</h4>             
                     <h3 class="record"><i class="fa fa-book"></i>Published in ACM CSCW 2021 (full paper)</h3>
                     <h3>We present ReliveReality, an experience-sharing method utilizing deep learning-based computer vision techniques to reconstruct clothed humans and 3D environments and estimate 3D pose with only a RGB camera. ReliveReality can be integrated into social virtual environments, allowing others to socially relive a shared experience by moving around the experience from different perspectives, on desktop or in VR. We conducted a 44-participant within-subject study to compare ReliveReality to viewing recorded videos, and to a ReliveReality version with blurring obfuscation. Our results shed light on how people identify with reconstructed avatars, how obfuscation affects reliving experiences, and sharing preferences and privacy concerns for reconstructed experiences. We propose design implications for addressing these issues</h3>
                     <ul class="list-btn">
@@ -275,8 +299,7 @@
                 </div>                            
                 <div class="col-md-7 text-left text-style">
                     <h2>
-                        <header class="con3">CSCW 2021</header>
-                        Hide and Seek: Choices of Virtual Backgrounds in Video Chats and Their Effects on Perception
+                        <header class="con3">CSCW 2021</header> Hide and Seek: Choices of Virtual Backgrounds in Video Chats and Their Effects on Perception
                     </h2>
                     <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng Yao Wang</span>*, Angel Hsing-Chi Hwang*, Yao-Yuan Yang, and Andrea Stevenson Won. (*equal contribution)</h4>             
                     <h3 class="record"><i class="fa fa-book"></i>Published in ACM CSCW 2021 (full paper)</h3>
@@ -301,8 +324,7 @@
                 </div>                            
                 <div class="col-md-7 text-left text-style">
                     <h2>
-                        <header class="con3">CHI 2020</header>
-                        Again, Together: Socially Reliving Virtual Reality Experiences When Separated
+                        <header class="con3">CHI 2020</header>Again, Together: Socially Reliving Virtual Reality Experiences When Separated
                     </h2>
                     <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Mose Sakashita, Jingjin Li, Upol Ehsan, and Andrea Stevenson Won</h4>             
                     <h3 class="record"><i class="fa fa-book"></i>Published in ACM CHI 2020 (full paper)</h3>
@@ -328,8 +350,7 @@
                 </div>                            
                 <div class="col-md-7 text-left text-style">
                     <h2>
-                        <header class="con3">IEEE VR 2020</header>
-                        ReliveReality: Enabling Socially Reliving Experiences in Virtual Reality via a Single RGB camera
+                        <header class="con3">IEEE VR 2020</header>ReliveReality: Enabling Socially Reliving Experiences in Virtual Reality via a Single RGB camera
                     </h2>
                     <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Shengguang Bai, Ian Switzer, and Andrea Stevenson Won</h4>             
                     <h3 class="record"><i class="fa fa-book"></i>Published in IEEE VR 2020 (poster)</h3>
